// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> should render component 1`] = `
<span
  className="Wrapper-dyuznp gAhBoi"
>
  <label
    className="Label-ghyrbC KoSFt"
  />
  <input
    autoComplete="off"
    className="StyledInput__Input-eYzgai zNgEU"
    name={undefined}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type={undefined}
    value={undefined}
  />
</span>
`;

exports[`<Input /> should render component when focus and blur 1`] = `
<span
  className="Wrapper-dyuznp gAhBoi"
>
  <label
    className="Label-ghyrbC jrDnzE"
  />
  <input
    autoComplete="off"
    className="StyledInput__Input-eYzgai zNgEU"
    name={undefined}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type={undefined}
    value={undefined}
  />
</span>
`;

exports[`<Input /> should render component when focus and blur 2`] = `
<span
  className="Wrapper-dyuznp gAhBoi"
>
  <label
    className="Label-ghyrbC KoSFt"
  />
  <input
    autoComplete="off"
    className="StyledInput__Input-eYzgai zNgEU"
    name={undefined}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type={undefined}
    value={undefined}
  />
</span>
`;

exports[`<Input /> should render component with value 1`] = `
<span
  className="Wrapper-dyuznp gAhBoi"
>
  <label
    className="Label-ghyrbC jrDnzE"
  />
  <input
    autoComplete="off"
    className="StyledInput__Input-eYzgai zNgEU"
    name={undefined}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type={undefined}
    value="value"
  />
</span>
`;
